cros: Fix submitting PIN when VK is not shown.

PIN is hashed differently, and this hashing needs to happen even if the PIN
keyboard is not shown but the user can submit via PIN.

Bug: 873328
Change-Id: I658d7343628c6d24a42179966f1aa3c54ed3a4a8
Reviewed-on: https://chromium-review.googlesource.com/1173257
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583421}
Former-commit-id: 04d6e4f79498bf85cdbf3aef52c91902c028a59c