ash/login/ui/login_auth_user_view.h
@@ -97,8 +97,9 @@ class ASH_EXPORT LoginAuthUserView : public NonAccessibleView,
   ~LoginAuthUserView() override;
 
   // Set the displayed set of auth methods. |auth_methods| contains or-ed
-  // together AuthMethod values.
-  void SetAuthMethods(uint32_t auth_methods);
+  // together AuthMethod values. |can_use_pin| should be true if the user can
+  // authenticate using PIN, even if the PIN keyboard is not displayed.
+  void SetAuthMethods(uint32_t auth_methods, bool can_use_pin);
   AuthMethods auth_methods() const { return auth_methods_; }
 
   // Add an easy unlock icon.
@@ -166,6 +167,10 @@ class ASH_EXPORT LoginAuthUserView : public NonAccessibleView,
   void DecorateOnlineSignInMessage();
 
   AuthMethods auth_methods_ = AUTH_NONE;
+  // True if the user's password might be a PIN. PIN is hashed differently from
+  // password. The PIN keyboard may not always be visible even when the user
+  // wants to submit a PIN, eg. the virtual keyboard hides the PIN keyboard.
+  bool can_use_pin_ = false;
   LoginUserView* user_view_ = nullptr;
   LoginPasswordView* password_view_ = nullptr;
   LoginPinView* pin_view_ = nullptr;
